--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "moment-timezone": "^0.5.13",
     "mongoose": "^5.2.17",
     "morgan": "^1.8.1",
+    "node-fetch": "^2.2.0",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
     "passport-jwt": "4.0.0",
