--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "starter project"
   ],
   "dependencies": {
+    "@google-cloud/firestore": "^0.18.0",
     "axios": "^0.18.0",
     "bcryptjs": "2.4.3",
     "bluebird": "^3.5.0",
