--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,14 @@ services:
   boilerplate-api:
     build: .
     environment:
-      - MONGO_URI=mongodb://mongodb:27017/express-rest-es2017-boilerplate
+      - JWT_SECRET=bA2xcjpf8y5aSUFsNB2qN5yymUBSs6es3qHoFpGkec75RCeBb8cpKauGefw5qy4
+      - JWT_EXPIRATION_MINUTES=15
+      - PORT=8080
+      - DOTA2_ID=570
+      - DOTA2_CONTEXT=2
+      - STEAM_API_KEY=fzUIsrIJopol6bwQo6s-GNAhZ1Q
+      - GOOGLE_CLOUD_PROJECT_ID=steam-220215
     volumes:
       - .:/app
     ports:
-      - "5000:5000"
-    depends_on:
-      - mongodb
-
-  mongodb:
-    image: mongo
-    ports:
-      - "27017:27017"
+      - "8080:8080"
