--- a/package.json
+++ b/package.json
@@ -89,7 +89,10 @@
     "passport-jwt": "4.0.0",
     "passport-steam": "^1.0.10",
     "pm2": "^3.0.0",
+    "steam-totp": "^2.1.0",
     "steam-tradeoffer-manager": "^2.9.4",
+    "steam-user": "^3.29.1",
+    "steamcommunity": "^3.38.0",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
