--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,8 @@
     "no-unused-vars": ["error", { "argsIgnorePattern": "next" }],
     "no-use-before-define": ["error", { "variables": false }],
     "no-multi-str": 0,
-    "max-len": "off"
+    "max-len": "off",
+    "import/prefer-default-export": "off"
   },
   "env": {
     "node": true,
