--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "joi": "^14.0.2",
     "jwt-simple": "0.5.2",
     "lodash": "^4.17.11",
+    "lru-cache": "^5.1.1",
     "method-override": "^3.0.0",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.13",
