--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,20 @@ services:
   boilerplate-api:
     build: .
     environment:
-      - JWT_SECRET=bA2xcjpf8y5aSUFsNB2qN5yymUBSs6es3qHoFpGkec75RCeBb8cpKauGefw5qy4
+      - JWT_SECRET=hoang-danh-steam-bot
       - JWT_EXPIRATION_MINUTES=15
-      - PORT=8080
+      - PORT=5000
       - DOTA2_ID=570
       - DOTA2_CONTEXT=2
       - STEAM_API_KEY=fzUIsrIJopol6bwQo6s-GNAhZ1Q
+      - STEAM_POWERED_API_KEY=CF75B58E693F99BD0C9ACBD60157EA48
       - GOOGLE_CLOUD_PROJECT_ID=steam-220215
+      - WHITE_LIST_ORIGIN=["https://steam-220215.appspot.com", "https://tradewithme.online", "https://madama-dev"]
+      - DOMAIN=api.tradewithme.online
+      - BOTS=["76561198366407443", "76561198368731785"]
+      - STEAM_BOT_NAME=["marketbot111", "marketbot112"]
+      - STEAM_BOT_PASSWORD=["Tivac123gh6pm", "tm4c123gh6pm"]
     volumes:
       - .:/app
     ports:
-      - "8080:8080"
+      - "5000:5000"
