--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "precommit": "yarn lint",
     "start": "cross-env NODE_ENV=production pm2 ./src/index.js",
     "start-stage": "cross-env NODE_ENV=production node src/index.js",
-    "dev": "nodemon ./src/index.js",
+    "dev": "nodemon --inspect=0.0.0.0:9222 ./src/index.js",
     "lint": "eslint ./src/ --ignore-path .gitignore --ignore-pattern internals/scripts",
     "lint:fix": "yarn lint --fix",
     "lint:watch": "yarn lint --watch",
