--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@google-cloud/firestore": "^0.18.0",
     "axios": "^0.18.0",
     "bcryptjs": "2.4.3",
+    "better-queue": "^3.8.10",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.0",
     "compression": "^1.6.2",
