--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,5 +2,6 @@ version: "2"
 services:
   boilerplate-api:
     command: yarn start
+    restart: always
     environment:
       - NODE_ENV=production
