--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "precommit": "yarn lint",
-    "start": "cross-env NODE_ENV=production pm2 ./src/index.js",
+    "start": "cross-env NODE_ENV=production node ./src/index.js",
     "start-stage": "cross-env NODE_ENV=production node src/index.js",
     "dev": "nodemon --inspect=0.0.0.0:9222 ./src/index.js",
     "lint": "eslint ./src/ --ignore-path .gitignore --ignore-pattern internals/scripts",
