--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "dotenv-safe": "^6.0.0",
     "express": "^4.15.2",
     "express-validation": "^1.0.2",
+    "fluent-logger": "^3.3.1",
     "helmet": "^3.5.0",
     "http-status": "^1.0.1",
     "joi": "^14.0.2",
@@ -95,7 +96,8 @@
     "steam-tradeoffer-manager": "^2.9.4",
     "steam-user": "^3.29.1",
     "steamcommunity": "^3.38.0",
-    "uuid": "^3.1.0"
+    "uuid": "^3.1.0",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "apidoc": "^0.17.5",
